# easy_test

./: .gitattributes  CMakeLists.txt  README.md  build_android_aarch64.sh  build_linux_x86_64.sh  make_android_test_pack.sh  make_linux_x86_64_test_pack.sh
MNN/: build_android_aarch64.sh  build_linux_x86_64.sh
MNN/libs/android_aarch64/: MNNV2Basic.out  backendTest.out  checkInvalidValue.out  getPerformance.out  mobilenetTest.out  testModel.out  testModelWithDescrisbe.out  timeProfile.out
MNN/libs/linux_x86_64/: MNNConvert  MNNDump2Json.out  MNNV2Basic.out  backendTest.out  checkInvalidValue.out  getPerformance.out  mobilenetTest.out  testModel.out  testModelWithDescrisbe.out  timeProfile.out
include/: MultiThreadModelManager.h  easy_auto_file_io.h  easy_log.h  easy_threadpool.h  easy_timer.h
models/caffe/SqueezeNet_v1_1/: deploy.prototxt
models/mnn/: inception_resnet_v2.mnn  squeezenet_v1.1.mnn
nv12_jpeg_convert/: JpegToYUV.c  YUVToJpeg.c  YUVToJpeg.h  nv12_jpeg_convert_test.cpp  nv12_jpeg_convert_test.h
src/: easy_auto_file_io.cpp  easy_timer.cpp  main.cpp
src/squeezenet_test/: squeezenet_test.cpp  squeezenet_test.h
